# HeroOnlineStatTracker

./: .gitignore  Makefile  Pipfile  Procfile  README.md  app.py  index.html  package-lock.json  package.json  polymer.json  pyproject.toml  requirements.txt  webpack.config.js
components/: hero-stats.js
templates/: hero_stats.html
